<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"/>
    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:inputType="number"/>
    <EditText
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/info"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submitInformation"/>

    <Button
        android:id="@+id/load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:onClick="loadPerson"/>
    <Button
        android:id="@+id/updateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_name"
        android:onClick="updateName"/>
    <Button
        android:id="@+id/deleteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_name"
        android:onClick="deleteName"/>
    <Button
        android:id="@+id/deletePerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_person"
        android:onClick="deletePerson"/>

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>
</LinearLayout>